--- a/pages/interests_out.html
+++ b/pages/interests_out.html
@@ -4,45 +4,50 @@ on a night out we like
         <div class="out groupings">
 
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('art shows and galleries');"
-                    ng-class="{selectedButton: ioc.checkInterest('art shows and galleries')}">art shows
+                    ng-click="ioc.artGalleries=!ioc.artGalleries; ioc.$log.log(ioc.artGalleries);"
+                    ng-class="{buttonHighlighted: ioc.artGalleries}">art shows
                 and galleries</button>
-            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align" ng-click="ioc.toggleInterest('casual dining');"
-                    ng-class="{selectedButton: ioc.checkInterest('casual dining')}">casual dining</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('comedy shows');"
-                    ng-class="{selectedButton: ioc.checkInterest('comedy shows')}">comedy shows</button>
+                    ng-click="ioc.casualDining=!ioc.casualDining; ioc.$log.log(ioc.casualDining);"
+                    ng-class="{buttonHighlighted: ioc.casualDining}">casual dining</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('concerts (classical)');"
-                    ng-class="{selectedButton: ioc.checkInterest('concerts (classical)')}">concerts (classical)</button>
+                    ng-click="ioc.comedy=!ioc.comedy; ioc.$log.log(ioc.comedy)"
+                    ng-class="{buttonHighlighted: ioc.comedy}">comedy shows</button>
+
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('concerts (popular - jazz, rock, country)');"
-                    ng-class="{selectedButton: ioc.checkInterest('concerts (popular - jazz, rock, country)')}">concerts (popular - jazz, rock, country)</button>
+                    ng-click="ioc.classicalConcerts=!ioc.classicalConcerts;ioc.$log.log(ioc.classicalConcerts)"
+                    ng-class="{buttonHighlighted: ioc.classicalConcerts}">concerts (classical)</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('dancing (ballroom)');"
-                    ng-class="{selectedButton: ioc.checkInterest('dancing (ballroom)')}">dancing (ballroom)</button>
+                    ng-click="ioc.popularConcerts=!ioc.popularConcerts; ioc.$log.log(ioc.popularConcerts)"
+                    ng-class="{buttonHighlighted: ioc.popularConcerts}">concerts (popular - jazz, rock, country)</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('dancing (country)');"
-                    ng-class="{selectedButton: ioc.checkInterest('dancing (country)')}">dancing (country)</button>
+                    ng-click="ioc.ballroomDancing=!ioc.ballroomDancing; ioc.$log.log(ioc.ballroomDancing)"
+                    ng-class="{buttonHighlighted: ioc.ballroomDancing}">dancing (ballroom)</button>
+
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('dancing (salsa)');"
-                    ng-class="{selectedButton: ioc.checkInterest('dancing (salsa)')}">dancing
+                    ng-click="ioc.countryDancing=!ioc.countryDancing; ioc.$log.log(ioc.countryDancing);"
+                    ng-class="{buttonHighlighted: ioc.countryDancing}">dancing (country)</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
+                    ng-click="ioc.salsaDancing=!ioc.salsaDancing; ioc.$log.log(ioc.salsaDancing)"
+                    ng-class="{buttonHighlighted: ioc.salsaDancing}">dancing
                 (salsa)</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('fine dining');"
-                    ng-class="{selectedButton: ioc.checkInterest('fine dining')}">fine dining</button>
+                    ng-click="ioc.fineDining=!ioc.fineDining; ioc.$log.log(ioc.fineDining)"
+                    ng-class="{buttonHighlighted: ioc.fineDining}">fine dining</button>
+
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('karaoke');"
-                    ng-class="{selectedButton: ioc.checkInterest('karaoke')}">karaoke</button>
+                    ng-click="ioc.karaoke=!ioc.karaoke; ioc.$log.log(ioc.karaoke)"
+                    ng-class="{buttonHighlighted: ioc.karaoke}">karaoke</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('live theater shows');"
-                    ng-class="{selectedButton: ioc.checkInterest('live theater shows')}">live theater shows</button>
+                    ng-click="ioc.liveTheater=!ioc.liveTheater; ioc.$log.log(ioc.liveTheater)"
+                    ng-class="{buttonHighlighted: ioc.liveTheater}">live theater shows</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('movies');"
-                    ng-class="{selectedButton: ioc.checkInterest('movies')}">movies</button>
+                    ng-click="ioc.movies=!ioc.movies; ioc.$log.log(ioc.movies)"
+                    ng-class="{buttonHighlighted: ioc.movies}">movies</button>
+
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.toggleInterest('wine tasting');"
-                    ng-class="{selectedButton: ioc.checkInterest('wine tasting')}">wine tasting</button>
+                    ng-click="ioc.wineTasting=!ioc.wineTasting; ioc.$log.log(ioc.wineTasting)"
+                    ng-class="{selectedButton: ioc.wineTasting}">wine tasting</button>
 
 
 
@@ -53,12 +58,12 @@ on a night out we like
 
 <div class="previous-next pull-right">
     <a href="#/interests_home">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="ioc.setNightOutInterests()">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
     <a href="#/interests_outdoors">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="ioc.setNightOutInterests()">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
     </a>
