--- a/pages/interests_outdoors.html
+++ b/pages/interests_outdoors.html
@@ -3,47 +3,50 @@ to stay active we like
     <div class="interest-buttons">
         <div class="outdoor groupings">
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('bicycling');"
-                    ng-class="{selectedButton: iod.checkInterest('bicycling')}">bicycling</button>
+                    ng-click="iod.bicycling=!iod.bicycling; iod.$log.log(iod.bicycling)"
+                    ng-class="{buttonHighlighted: iod.bicycling}">bicycling</button>
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('bowling');"
-                    ng-class="{selectedButton: iod.checkInterest('bowling')}">bowling</button>
+                    ng-click="iod.bowling=!iod.bowling; iod.$log.log(iod.bowling)"
+                    ng-class="{buttonHighlighted: iod.bowling}">bowling</button>
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('golfing');"
-                    ng-class="{selectedButton: iod.checkInterest('golfing')}">golfing</button>
+                    ng-click="iod.golf=!iod.golf; iod.$log.log(iod.golf)"
+                    ng-class="{buttonHighlighted: iod.golf}">golfing</button>
+
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('hiking');"
-                    ng-class="{selectedButton: iod.checkInterest('hiking')}">hiking</button>
+                    ng-click="iod.hiking=!iod.hiking; iod.$log.log(iod.hiking)"
+                    ng-class="{buttonHighlighted: iod.hiking}">hiking</button>
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('horseback-riding');"
-                    ng-class="{selectedButton: iod.checkInterest('horseback-riding')}">horseback-riding</button>
+                    ng-click="iod.horsebackRiding=!iod.horsebackRiding; iod.$log.log(iod.horsebackRiding)"
+                    ng-class="{buttonHighlighted: iod.horsebackRiding}">horseback-riding</button>
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('kayaking/paddleboarding');"
-                    ng-class="{selectedButton: iod.checkInterest('kayaking/paddleboarding')}">kayaking/paddleboarding</button>
+                    ng-click="iod.kayaking=!iod.kayaking; iod.$log.log(iod.kayaking)"
+                    ng-class="{buttonHighlighted: iod.kayaking}">kayaking/paddleboarding</button>
+
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('motorcycling');"
-                    ng-class="{selectedButton: iod.checkInterest('motorcycling')}">motorcycling</button>
+                    ng-click="iod.motorcycling=!iod.motorcycling;iod.$log.log(iod.motorcycling)"
+                    ng-class="{buttonHighlighted: iod.motorcycling}">motorcycling</button>
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('racquetball');"
-                    ng-class="{selectedButton: iod.checkInterest('racquetball')}">racquetball</button>
+                    ng-click="iod.racquetball=!iod.racquetball; iod.$log.log(iod.racquetball)"
+                    ng-class="{buttonHighlighted: iod.racquetball}">racquetball</button>
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('tennis');"
-                    ng-class="{selectedButton: iod.checkInterest('tennis')}">tennis</button>
+                    ng-click="iod.tennis=!iod.tennis; iod.$log.log(iod.tennis)"
+                    ng-class="{buttonHighlighted: iod.tennis}">tennis</button>
+
             <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align"
-                    ng-click="iod.toggleInterest('walking');"
-                    ng-class="{selectedButton: iod.checkInterest('walking')}">walking</button>
+                    ng-click="iod.walking=!iod.walking; iod.$log.log(iod.walking)"
+                    ng-class="{buttonHighlighted: iod.walking}">walking</button>
         </div>
     </div>
 </div>
 
 <div class="previous-next pull-right">
     <a href="#/interests_out">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="iod.setOutdoorInterests()">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
     <a href="#/interests_travel">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="iod.setOutdoorInterests()">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
     </a>
