Adding my cnanges so Junie can work on something in the interests_travel area, will work on validation from a different page

--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -29,7 +29,8 @@ when traveling we like
         </button>
     </a>
     <a href="#/sign_up">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setTravelInterests()">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
+                ng-click="itc.setTravelInterests();">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
     </a>
