First part working to do calculations.

--- a/proto_profile_page.html
+++ b/proto_profile_page.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="protoProfileApp">
 <head>
     <meta charset="UTF-8">
-    <title>DoubleDate Proto User Page</title>
+    <title>DoubleDate Proto Profile Page</title>
     <link rel="stylesheet" type="text/css" href="dropzone_4.3.0_dist/dropzone.css">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
