Created a fuction that prevents the user from moving forward without selecting at leat one interest, but not ideal.  Need to get teh interstCounter working.

--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -38,7 +38,7 @@
     </a>
     <a href="#/interests_out">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
-                ng-click="ihc.setNightAtHomeInterests()">
+                ng-click="ihc.setNightAtHomeInterests();">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
     </a>
