email field with validation html skeleton

--- a/proto_edit_profile_sean.html
+++ b/proto_edit_profile_sean.html
@@ -47,7 +47,10 @@
             margin: 10%;
             font-size:0.5em;
             position:relative;
+            color: black;
+            font-weight:bold;
         }
+
         .profile-option, .photo-option {
             display:none;
             height:40vh;
@@ -106,40 +109,40 @@
     <h1>Profile Editor</h1>
     <img class="photo" src="test">
     <div class="profile-edit list-group">
-        <a href="#" class="profile-list list-group-item">Names</a>
+        <div class="profile-list list-group-item">Names</div>
         <div class="profile-option">
             <input type="text" placeholder="Name 1">
             <input type="text" placeholder="Name 2">
             <button>Save</button>
         </div>
-        <a href="#" class="profile-list list-group-item">Ages</a>
+        <div class="profile-list list-group-item">Ages</div>
         <div class="profile-option">
             <input type="text" placeholder="Age 1">
             <input type="text" placeholder="Age 2">
             <button>Save</button>
         </div>
-        <a href="#" class="profile-list list-group-item">Paragraph</a>
+        <div class="profile-list list-group-item">Paragraph</div>
         <div class="profile-option">
             <textarea placeholder="enter text here"></textarea>
             <button>Save</button>
         </div>
-        <a href="#" class="profile-list list-group-item">Zip Code</a>
+        <div class="profile-list list-group-item">Zip Code</div>
         <div class="profile-option">
             <input type="text" placeholder="Zip Code">
             <button>Save</button>
         </div>
-        <a href="#" class="profile-list list-group-item">Search distance</a>
+        <div class="profile-list list-group-item">Search distance</div>
         <div class="profile-option">
             <input type="text" placeholder="Distance">
             <button>Save</button>
         </div>
-        <a href="#" class="profile-list list-group-item">Age search filter</a>
+        <div class="profile-list list-group-item">Age search filter</div>
         <div class="profile-option">
             <input type="text" placeholder="Age min">
             <input type="text" placeholder="Age max">
             <button>Save</button>
         </div>
-        <a href="#" class="profile-list list-group-item">Interests</a>
+        <div class="profile-list list-group-item">Interests</div>
         <div class="profile-option">
             <input type="checkbox" id="cbox1" value="first_checkbox"><label for="cbox1">Interest 1</label>
             <input type="checkbox" id="cbox2" value="second_checkbox"><label for="cbox2">Interest 2</label>
@@ -150,6 +153,5 @@
             <button>Save</button>
         </div>
     </div>
-    <!--<div id="footer">footer placeholder</div>-->
     </body>
 </html>
