--- a/proto_faq_sean.html
+++ b/proto_faq_sean.html
@@ -36,10 +36,11 @@
         .faq_body h1 {
             margin: 5%;
         }
-        .profile-edit.list-group {
+        div.list-group {
             margin: 10%;
             font-size:0.5em;
             position:relative;
+            color: black;
         }
         .question {
             font-weight:bold;
@@ -63,7 +64,7 @@
             $(this).removeClass('profile-list');
             //$('.profile-list').toggle();
             $(this).addClass('profile-list');
-            var index = $(this).index("a");
+            var index = $(this).index(".question");
             $('.answer:eq('+index+')').height("auto");
             var autoHeight = $('.answer:eq('+index+')').height() + 10;
             $('.answer:eq('+index+')').height("0px");
@@ -76,39 +77,39 @@
 <div class="faq_body">
     <h1>FAQ</h1>
     <div class="profile-edit list-group">
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             What is this site?
-        </a>
+        </div>
         <div class="answer">
             <p>DoubleDateOC is a web site for matching up couples with other couples in their area for shared activities.  You put in a minimal amount of information, like your age, zip code and interests, and we match you up to other couples with a similar age, location, and shared interests.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             So it’s like a dating site?
-        </a>
+        </div>
         <div class="answer">
             <p>Well, yes and no. It is like a dating site in that we are trying to match up people, but it is different in two important aspects. First, we are trying to match up couples with other couples. Second, dating sites are trying for the two extremes of either finding sex tonight or finding “the one” to love forever. DoubleDateOC is in the middle: trying to find another couple to have shared non-sexual activities with. Hopefully this will be ongoing in a new friendship.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             Why just OC?
-        </a>
+        </div>
         <div class="answer">
             <p>Orange County is just the test market. That gives us plenty of other couples to match you up with, and allows us to work out any problems in the system before we go national or international.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             Who are these other people?
-        </a>
+        </div>
         <div class="answer">
             <p>They are other couples just like you: couples who have interests and things they like to do, and realize that oftentimes, the thing that makes these interests even more fun is sharing them with other people.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             Why do you want all of this private information?
-        </a>
+        </div>
         <div class="answer">
             <p>We try to ask for a minimum of information. We are only asking for your first names, age range, and zip code for location. That is because most couples want to be matched up with other couples in the same approximate area and the same approximate age range. We ask for a photo and a paragraph describing you, so other couples can have something to help select based on. We ask for an e-mail so that we can notify couples when they are matched.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             Am I automatically matched with every other couple?
-        </a>
+        </div>
         <div class="answer">
             <p>You will automatically be matched against every other active couple in the database, on the following criteria:</p>
             <ul>
@@ -118,57 +119,57 @@
                 <li>Personal selection: Based on the three criteria above, you will be shown potential matches where meet the age and location requirements, and where you have the most shared interests. At that point, you will be shown the first names, profile picture, and profile paragraph of the other couple, along with the common interests. You will be allowed to give a “thumbs up” or “thumbs down”. It is only when two couples give the “thumbs up” to each other that the e-mails are sent out.</li>
             </ul>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             When I first signed up, why didn’t I see all the information on the other couples?
-        </a>
+        </div>
         <div class="answer">
             <p>When you are a first-time user and putting in the basic zip code and age and interests, DoubleDate does a search for “sample matches” that meet these criteria.  DoubleDate will not reveal the profile of other couples until you have completed the registration process, and will not reveal the e-mail address of another couple until you have approved of them and they have approved of you.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             What if DoubleDateOC didn’t find me any matches?
-        </a>
+        </div>
         <div class="answer">
             <p>The DoubleDateOC match finder runs in the background, and you should expect to see your first potential matches show up within one hour; check back after one hour to see your first potential matches. Bear in mind that DoubleDateOC is a new service that is currently ramping up. You should expect to see more matches in the near future. Check back in a few days and see what new potential matches we have identified. Also, you might expand your age range(s) and the number of interests you have selected.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             How many interests should I list?
-        </a>
+        </div>
         <div class="answer">
             <p>As many as you are looking for couples to participate in. The more interests you list, the more potential matches DoubleDateOC can find.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             What if I don’t want to give out my e-mail address?
-        </a>
+        </div>
         <div class="answer">
             <p>Well, we have to have some place to notify you of the match. If you don’t want to use your existing e-mail, just hop onto GMail and get a new e-mail address that is specific to you as a couple on DoubleDateOC.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             Am I going to get spam on this e-mail address?
-        </a>
+        </div>
         <div class="answer">
             <p>No. DoubleDateOC will only use this e-mail address to notify you of mutual matches. As part of sending out a mutual match, DoubleDateOC will send you an e-mail advising you of the other couple’s e-mail address, and send the other couple an e-mail advising them of your e-mail address. Then the two couples can make arrangements to get together.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             How do I make contact?
-        </a>
+        </div>
         <div class="answer">
             <p>Once you have received an e-mail with another couple’s e-mail address, send them a follow-up with any more information you wish to share, such as the interests you are most excited about. You can exchange phone numbers, or set up a meeting with the other couple.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             How do I know I can trust this other couple?
-        </a>
+        </div>
         <div class="answer">
             <p>The Internet is a big place, and DoubleDateOC cannot be responsible for trying to vet or screen your potential matches beyond the data we are given. You should exercise normal caution in setting up a first meeting, such as arranging it in a restaurant or other public place.</p>
         </div>
-        <a href="#" class="question list-group-item">
+        <div class="question list-group-item">
             Why do you have all this advertising?
-        </a>
+        </div>
         <div class="answer">
             <p>DoubleDateOC is free to its users, and makes money from its advertisers. We try to display advertisers that are based on your interests. We encourage the advertisers to make special deals available to the DoubleDateOC clientele, and we encourage you to patronize those businesses.</p>
         </div>
         <!--
-        <a href="#" class="question list-group-item">
-        </a>
+        <div class="question list-group-item">
+        </div>
         <div class="answer">
         </div>
         -->
