added sample match page

--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -28,10 +28,9 @@ when traveling we like
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
-    <a href="#/sign_up">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
-                ng-click="itc.setTravelInterests();">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <a href="#/before_sample_match">
+        <button type="button" class="btn btn-default initialSubmit" aria-label="Left Align"
+                ng-click="itc.setTravelInterests();">find our matches
         </button>
     </a>
 </div>
