--- a/pages/signup_email.html
+++ b/pages/signup_email.html
@@ -1,29 +1,17 @@
 <!--include a load animation-->
 
-
-<input type="text" placeholder="e-mail address" class="input_text">
-
-
-    <!--<a href="#/interests_travel">-->
-        <!--<button type="button" class="btn btn-default chevronButton signup-previous" aria-label="Left Align">-->
-            <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
-        <!--</button>-->
-    <!--</a>-->
+<input type="text" placeholder="e-mail address" class="input_text" ng-model = 'suec.ourEmail'>
+<div class="invalidEmail" ng-if='suec.validate'>Please enter a valid e-mail address</div>
 
 <div class="previous-next pull-right">
     <a href="#/signup_password">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setTravelInterests()">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
     <!-- <a href="#/signup_paragraph"> -->
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setTravelInterests();">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="suec.validate_email()">
              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
     <!-- </a> -->
 </div>
-
-
-
-
-<!-- show blurred image of 3-4 matches below --!>
