interest validation at home complete

--- a/pages/interests_outdoors.html
+++ b/pages/interests_outdoors.html
@@ -45,10 +45,9 @@ to stay active we like
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
-    <a id="myAnchor" href="#/interests_travel">
+
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
-                ng-click="iod.setOutdoorInterests(); iod.interestRequired()">
+                ng-click="iod.setOutdoorInterests();">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
-    </a>
 </div>
