Fixed issue with disabled button being clickable if user clicks many times in a row

--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -35,10 +35,10 @@
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
-    <a href="#/interests_out">
+
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
-                ng-disabled="ihc.interestCount()==0">
+                ng-disabled="ihc.atHomeInterestCount()==0;" ng-click="ihc.setUrl()">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
-    </a>
+
 </div>
