--- a/pages/interests_out.html
+++ b/pages/interests_out.html
@@ -4,65 +4,65 @@ on a night out we like
         <div class="out groupings">
 
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.artGalleries=!ioc.artGalleries; ioc.$log.log(ioc.artGalleries);"
+                    ng-click="ioc.artGalleries=!ioc.artGalleries; ioc.$log.log(ioc.artGalleries);ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.artGalleries}">art shows
                 and galleries</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.casualDining=!ioc.casualDining; ioc.$log.log(ioc.casualDining);"
+                    ng-click="ioc.casualDining=!ioc.casualDining; ioc.$log.log(ioc.casualDining); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.casualDining}">casual dining</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.comedy=!ioc.comedy; ioc.$log.log(ioc.comedy)"
+                    ng-click="ioc.comedy=!ioc.comedy; ioc.$log.log(ioc.comedy); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.comedy}">comedy shows</button>
 
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.classicalConcerts=!ioc.classicalConcerts;ioc.$log.log(ioc.classicalConcerts)"
+                    ng-click="ioc.classicalConcerts=!ioc.classicalConcerts;ioc.$log.log(ioc.classicalConcerts); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.classicalConcerts}">concerts (classical)</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.popularConcerts=!ioc.popularConcerts; ioc.$log.log(ioc.popularConcerts)"
+                    ng-click="ioc.popularConcerts=!ioc.popularConcerts; ioc.$log.log(ioc.popularConcerts); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.popularConcerts}">concerts (popular - jazz, rock, country)</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.ballroomDancing=!ioc.ballroomDancing; ioc.$log.log(ioc.ballroomDancing)"
+                    ng-click="ioc.ballroomDancing=!ioc.ballroomDancing; ioc.$log.log(ioc.ballroomDancing); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.ballroomDancing}">dancing (ballroom)</button>
 
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.countryDancing=!ioc.countryDancing; ioc.$log.log(ioc.countryDancing);"
+                    ng-click="ioc.countryDancing=!ioc.countryDancing; ioc.$log.log(ioc.countryDancing); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.countryDancing}">dancing (country)</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.salsaDancing=!ioc.salsaDancing; ioc.$log.log(ioc.salsaDancing)"
+                    ng-click="ioc.salsaDancing=!ioc.salsaDancing; ioc.$log.log(ioc.salsaDancing); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.salsaDancing}">dancing
                 (salsa)</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.fineDining=!ioc.fineDining; ioc.$log.log(ioc.fineDining)"
+                    ng-click="ioc.fineDining=!ioc.fineDining; ioc.$log.log(ioc.fineDining); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.fineDining}">fine dining</button>
 
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.karaoke=!ioc.karaoke; ioc.$log.log(ioc.karaoke)"
+                    ng-click="ioc.karaoke=!ioc.karaoke; ioc.$log.log(ioc.karaoke); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.karaoke}">karaoke</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.liveTheater=!ioc.liveTheater; ioc.$log.log(ioc.liveTheater)"
+                    ng-click="ioc.liveTheater=!ioc.liveTheater; ioc.$log.log(ioc.liveTheater); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.liveTheater}">live theater shows</button>
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.movies=!ioc.movies; ioc.$log.log(ioc.movies)"
+                    ng-click="ioc.movies=!ioc.movies; ioc.$log.log(ioc.movies); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{buttonHighlighted: ioc.movies}">movies</button>
 
             <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align"
-                    ng-click="ioc.wineTasting=!ioc.wineTasting; ioc.$log.log(ioc.wineTasting)"
+                    ng-click="ioc.wineTasting=!ioc.wineTasting; ioc.$log.log(ioc.wineTasting); ioc.aNightOutInterestButtonClicked();"
                     ng-class="{selectedButton: ioc.wineTasting}">wine tasting</button>
 
         </div>
     </div>
 </div>
-
+<p>Please select at least one interest.</p>
 <div class="previous-next pull-right">
     <a href="#/interests_home">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="ioc.setNightOutInterests()">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
-    <a href="#/interests_outdoors">
+
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
-                ng-click="ioc.setNightOutInterests();">
+                ng-disabled="ioc.aNightOutInterestCount()==0;" ng-click="ioc.setUrl()">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
-    </a>
+
 </div>
