--- a/pages/signup_email.html
+++ b/pages/signup_email.html
@@ -9,9 +9,9 @@
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
-    <!-- <a href="#/signup_paragraph"> -->
+    <a href="#/signup_password">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="suec.validate_email()">
              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
-    <!-- </a> -->
+    </a>
 </div>
