--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -3,19 +3,20 @@ when traveling we like
     <div class="interest-buttons">
         <div class="at-home groupings">
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
-                    ng-click="itc.camping=!itc.camping; itc.$log.log(itc.camping)"
+                    ng-click="itc.camping=!itc.camping; itc.$log.log(itc.camping);itc.travelInterestButtonClicked();"
                     ng-class="{buttonHighlighted:itc.camping}">camping
             </button>
 
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
-                    ng-click="itc.domesticTravel=!itc.domesticTravel; itc.$log.log(itc.domesticTravel);"
+                    ng-click="itc.domesticTravel=!itc.domesticTravel; itc.$log.log(itc.domesticTravel); itc.travelInterestButtonClicked();"
                     ng-class="{buttonHighlighted:itc.domesticTravel}">domestic
                 travel</button>
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
-                    ng-click="itc.rving=!itc.rving; itc.$log.log(itc.rving)" ng-class="{buttonHighlighted:itc.rving}">RV
+                    ng-click="itc.rving=!itc.rving; itc.$log.log(itc.rving); itc.travelInterestButtonClicked();"
+                    ng-class="{buttonHighlighted:itc.rving}">RV
                 -ing</button>
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
-                    ng-click="itc.travelAbroad=!itc.travelAbroad; itc.$log.log(itc.travelAbroad)"
+                    ng-click="itc.travelAbroad=!itc.travelAbroad; itc.$log.log(itc.travelAbroad); itc.travelInterestButtonClicked();"
                     ng-class="{buttonHighlighted:itc.travelAbroad}">traveling
                 abroad</button>
         </div>
@@ -28,9 +29,9 @@ when traveling we like
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
-    <a href="#/before_sample_match">
+
         <button type="button" class="btn btn-default initialSubmit" aria-label="Left Align"
-                ng-click="itc.setTravelInterests();">find our matches
+                ng-disabled="itc.travelInterestCount()==0;" ng-click="itc.setUrl()">find our matches
         </button>
-    </a>
+
 </div>
