added the text to the travel page

--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -23,6 +23,7 @@ when traveling we like
     </div>
 </div>
 
+<p>Please select at least one interest.</p>
 <div class="previous-next pull-right">
     <a href="#/interests_outdoors">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setTravelInterests()">
