--- a/pages/distance.html
+++ b/pages/distance.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="previous-next pull-right">
-    <a href="#/user_location">
+    <a href="#/our_location">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
