worked on initial distance and zip code pages

--- a/pages/distance.html
+++ b/pages/distance.html
@@ -19,7 +19,7 @@
         </button>
     </a>
     <!-- <a href="#/user_age_range"> -->
-    <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="dc.setDistance()">
+    <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="dc.setDistance()" ng-disabled='!dc.userMaxDistance'>
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     </button>
     </a>
