--- a/pages/our_location.html
+++ b/pages/our_location.html
@@ -4,7 +4,7 @@
     <div class="match-locale">
         <input type="text" maxlength='5' placeholder="zip code" class="input_text" ng-change='olc.checkMaxZip(olc.ourInputZip)' ng-model="olc.ourInputZip" ng-blur="olc.getOurLocation(olc.ourInputZip)" >
         <button type="button" class="btn btn-default btn-block current-location">use my current location</button>
-        <div class="invalidMessage" ng-if='olc.final==false'>Please enter a valid zip code</div>
+        <div class="invalidMessage" ng-if='olc.correctZip==false'>please enter a valid zip code</div>
 
     <div class="previous-next pull-right">
         <a href="#/welcome">
