updated initial our age and their age pages to disable next button if not selected

--- a/pages/their_age_range.html
+++ b/pages/their_age_range.html
@@ -17,7 +17,7 @@
             </button>
         </a>
         <!-- <a href="#/interests_home"> -->
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click = 'tac.setTheirAge()'>
+            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click = 'tac.setTheirAge()' ng-disabled='!tac.theirAgeMin'>
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <!-- </button> -->
         </a>
