--- a/pages/our_age_range.html
+++ b/pages/our_age_range.html
@@ -20,9 +20,9 @@
         </button>
     </a>
     <!-- <a href="#/age_range"> -->
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click = 'oac.setOurAge()'>
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click = 'oac.setOurAge()' ng-disabled='!oac.ourAgeMin'>
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <!-- </button> -->
-    </a>
+        </button>
+    <!-- </a> -->
 </div>
 </div>
