--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -24,6 +24,7 @@ when traveling we like
 </div>
 
 <p>Please select at least one interest.</p>
+<a href="#faq">Frequently Asked Questions</a>
 <div class="previous-next pull-right">
     <a href="#/interests_outdoors">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setTravelInterests()">
