--- a/pages/signup_password.html
+++ b/pages/signup_password.html
@@ -1,4 +1,6 @@
 <div>
-	
-	this is the password page
+    enter password
+    <input type="password" class="input_text" id="confirm" placeholder="password">
+    <input type="password" class="input_text" id="pwd" placeholder="confirm password">
+    <button type="button" class="btn btn-default btn-block current-location" id="submit">submit</button>
 </div>
