add validation for password match and password characters

--- a/pages/signup_password.html
+++ b/pages/signup_password.html
@@ -1,6 +1,9 @@
 <div>
     enter password
-    <input type="password" class="input_text" id="confirm" placeholder="password">
-    <input type="password" class="input_text" id="pwd" placeholder="confirm password">
-    <button type="button" class="btn btn-default btn-block current-location" id="submit">submit</button>
+    <input type="password" class="input_text" id="confirm" placeholder="password" ng-model="supc.ourPassword">
+    <input type="password" class="input_text" id="pwd" placeholder="confirm password" ng-model = "supc.confirmPassword">
+    <button type="button" class="btn btn-default btn-block current-location" id="submit" ng-click="supc.validate_password()">submit</button>
+    <div ng-show="!supc.matchingPw">*password doesn't match</div>
+    <div ng-show="!supc.validPw">*password must be 8 characters long and contain a number, uppercase letter and lower case letter
+    </div>
 </div>
