next button on sign up email and pw page now sending info to userSErvice

--- a/pages/signup_email.html
+++ b/pages/signup_email.html
@@ -1,6 +1,6 @@
 <!--include a load animation-->
 enter email
-<input type="text" placeholder="e-mail address" class="input_text" ng-model = 'suec.ourEmail'>
+<input type="text" placeholder="e-mail address" class="input_text" ng-model = 'suec.emailAddress'>
 
 <!-- <div class="previous-next pull-right">
     <a href="#/before_sample_match">
