--- a/pages/our_location.html
+++ b/pages/our_location.html
@@ -3,8 +3,11 @@
     where are you?
     <div class="match-locale">
         <input type="text" maxlength='5' placeholder="zip code" class="input_text" ng-change='olc.checkMaxZip(olc.ourInputZip)' ng-model="olc.ourInputZip" ng-blur="olc.getOurLocation(olc.ourInputZip)" >
-        <button type="button" class="btn btn-default btn-block current-location">use my current location</button>
-        <div class="invalidMessage" ng-if='olc.correctZip==false'>please enter a valid zip code</div>
+        <button type="button" class="btn btn-default btn-block current-location"><span class ="glyphicon glyphicon-search"></span>   use my current location</button>
+        <div class="alert alert-danger alert-dismissible fade in" ng-if='olc.correctZip==false'>invalid zip code </div>
+
+
+        <!-- <div class="invalidMessage" ng-if='olc.correctZip==false'>please enter a valid zip code</div> -->
 
     <div class="previous-next pull-right">
         <a href="#/welcome">
@@ -18,7 +21,9 @@
             </button>
         <!-- </a> -->
     </div>
+
 </div>
+
 
 
 
