Terms and pic pages, routing, and controllers have been added, work in progress

--- a/pages/signup_picture.html
+++ b/pages/signup_picture.html
@@ -1,6 +1,9 @@
 <div>
-    <form action="demo_form.asp">
+
         <input type="file" name="pic" accept="image/*">
-        <input type="submit">
-    </form>
+        <img id="myImg" src="#" alt="your image" />
+        <!--<input type="submit">-->
+
+    <button type="button" class="btn btn-default btn-block welcome_button" ng-click="sup.setUrl();">
+        I'm finished...next </button>
 </div>
