--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.js"></script>
     <script src="https://rawgit.com/rzajac/angularjs-slider/master/dist/rzslider.js"></script>
     <script src="routing.js"></script>
+    <script src="dropzone_4.3.0_dist/dropzone.js"></script>
     <script src="user_service.js"></script>
     <script src="profile_service.js"></script>
     <script src="match_service.js"></script>
