--- a/pages/signup_picture.html
+++ b/pages/signup_picture.html
@@ -1,9 +1,28 @@
 <div>
 
-        <input type="file" name="pic" accept="image/*">
-        <img id="myImg" src="#" alt="your image" />
+        <!--<input type="file" name="pic" accept="image/*">-->
+        <!--<img id="myImg" src="#" alt="your image" />-->
         <!--<input type="submit">-->
+    <table>
 
+        <tr>
+            <td id="picture-dropzone-div" class="dropzone">
+                <!--
+                <form action="profile/upload.php"
+                      class="dropzone"
+                      id="picture-dropzone"></form>
+                -->
+            </td>
+            <td>
+                <img src="{{sup.pictureLink}}" id="profile-picture">
+            </td>
+        </tr>
+        <tr>
+            <td>Picture Link:</td>
+            <td>{{sup.pictureLink}}</td>
+        </tr>
+    </table>
     <button type="button" class="btn btn-default btn-block welcome_button" ng-click="sup.setUrl();">
-        I'm finished...next </button>
+        I'm finished...next
+    </button>
 </div>
