basic picture page functionality added, will need help to finish.

--- a/pages/signup_picture.html
+++ b/pages/signup_picture.html
@@ -3,25 +3,25 @@
         <!--<input type="file" name="pic" accept="image/*">-->
         <!--<img id="myImg" src="#" alt="your image" />-->
         <!--<input type="submit">-->
-    <table>
+    <div>
 
-        <tr>
-            <td id="picture-dropzone-div" class="dropzone">
+        <div>
+            <div id="picture-dropzone-div" class="dropzone">
                 <!--
                 <form action="profile/upload.php"
                       class="dropzone"
                       id="picture-dropzone"></form>
                 -->
-            </td>
-            <td>
+            </div>
+            <div>
                 <img src="{{sup.pictureLink}}" id="profile-picture">
-            </td>
-        </tr>
-        <tr>
-            <td>Picture Link:</td>
-            <td>{{sup.pictureLink}}</td>
-        </tr>
-    </table>
+            </div>
+        </div>
+        <div>
+            <p>Picture Link:</p>
+            <p>{{sup.pictureLink}}</p>
+        </div>
+    </div>
     <button type="button" class="btn btn-default btn-block welcome_button" ng-click="sup.setUrl();">
         I'm finished...next
     </button>
