--- a/pages/signup_paragraph.html
+++ b/pages/signup_paragraph.html
@@ -9,10 +9,8 @@
             .</span>
         </span>
         <p class="smaller"> When finished, click button </p>
-        <p>{{spc.paragraph}}</p>
+        <!--<p>{{spc.paragraph}}</p>-->
         <button type="button" class="btn btn-default btn-block welcome_button" ng-click="spc.signUpParagraphButtonClick()"> I'm finished...next </button>
-
-
 
     <ul>
         <li> Do:
