added faq modal

--- a/pages/distance.html
+++ b/pages/distance.html
@@ -1,7 +1,5 @@
-
-<body>
+<div>
 <h1>we're looking for couples within <span class="miles">{{dc.userMaxDistance}}</span> miles of us </h1>
-<!--  -->
 <div class="distance-btns">
     <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=5" ng-class="{buttonHighlighted: dc.userMaxDistance==5}">5</button>
     <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=10" ng-class="{buttonHighlighted: dc.userMaxDistance==10}">10</button>
@@ -24,4 +22,5 @@
     </button>
     </a>
 </div>
-</body>
+
+</div>
