included name page and summary in the flow

--- a/pages/user_fyi.html
+++ b/pages/user_fyi.html
@@ -1,6 +1,6 @@
 <div>
     <p>to see your best matches:</p>
-    <a href="#/signup_email">
+    <a href="#/signup_name">
         <button type="button" class="btn btn-default btn-block" aria-label="sign us up">
             sign us up
         </button>
