--- a/pages/user_summary.html
+++ b/pages/user_summary.html
@@ -1,6 +1,7 @@
 <div class="user-summary-page">
     <p>Here is your User Name: <span>"{{ usc.username }}"</span></p>
     <p> Please write it down for your records.</p>
-    <button type="button" class="btn btn-default btn-block submitSignup" aria-label="Left Align">Show Us
+    <button type="button" class="btn btn-default btn-block submitSignup" aria-label="Left Align"
+            ng-click="usc.summaryButtonClicked()">Show Us
         Matches</button>
 </div>
